--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ IF (Boost_FOUND)
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
     MESSAGE("-- Boost is found at: ${Boost_INCLUDE_DIR}")
     INSTALL( DIRECTORY ${GF_INC_DIRS}
-    	DESTINATION ${INCLUDE_OUTPUT_DIRECTORY}
+    	DESTINATION ${INCLUDE_OUTPUT_DIRECTORY}/${PROJECT_NAME}
 	    PATTERN ".svn" EXCLUDE 
 	 )
 ELSE()
