Modification of CMakeLists.txt for spirit.mar18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ SET(GF_INC_DIRS
 )
 
 INSTALL(DIRECTORY ${GF_INC_DIRS}
-        DESTINATION ${INCLUDE_OUTPUT_DIRECTORY}
+        DESTINATION ${INCLUDE_OUTPUT_DIRECTORY}/${PROJECT_NAME}
         PATTERN ".svn" EXCLUDE)
 
 IF(NOT CMAKE_BUILD_TYPE)
@@ -301,7 +301,7 @@ if(DEFINED RAVE)
 			${PROJECT_NAME}
 			${ROOT_LIBS}
 			${RAVE_LDFLAGS_STR}
-			-I${RAVE_INCLUDE_DIRS_I}
+#			-I${RAVE_INCLUDE_DIRS_I}
   	)
 else()
 	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ROOT_LIBS})
